fixed alignment it shifted :(

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -207,14 +207,14 @@ h4 {
 
 /*RESUME & ABOUT FORMATTING*/
 
-.resume,.about,.casestudy {
+.resume,.about,.casestudy,.tea {
   margin: 0 2rem 1.8rem;
   padding: 5.5rem 0 0;
   line-height: 2;
   max-width: 600px;
 }
 
-div.center {
+div.center, .tea {
   display:flex;
   justify-content: center;
 }
@@ -439,17 +439,6 @@ div.right>p {
   .modal-content {
       width: 80vw;
   }
-}
-
-
-
-/*fix this so it doesn't repeat*/
-.tea {
-  margin: 0 2rem 1.8rem;
-  padding: 5.5rem 0 0;
-  line-height: 2;
-  display: flex;
-  justify-content: center;
 }
 
 /*GRIDS FOR LARGER SCREENS*/
